<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeStepDetailFragment">
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/exo_player"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@android:color/background_dark"
            app:use_artwork="false">
        </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
        <ImageView
            android:id="@+id/img_step_image"
            android:layout_width="@dimen/img_recipe_image_widthheight"
            android:layout_height="@dimen/img_recipe_image_widthheight"
            android:adjustViewBounds="true"
            android:visibility="gone"/>
        <android.support.v7.widget.CardView
            android:id="@+id/cv_holder"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="@dimen/cardview_default_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/exo_player">
            <TextView
                android:id="@+id/txt_step_description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Description"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        </android.support.v7.widget.CardView>
        <RelativeLayout
            android:layout_below="@id/cv_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Previous"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:layout_alignParentBottom="true"/>
            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Next"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>
    </LinearLayout>
<!--<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipestep_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:textIsSelectable="true"
    tools:context="com.adeoluwa.android.bakingapp.RecipeStepDetailFragment" />-->
