<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipeContainer">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
  <!--  <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pb_progress_bar"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="invisible" />-->

</android.support.v4.widget.SwipeRefreshLayout>