...
                    android:layout_marginRight="16dp"
                    android:layout_below="@id/v_ing_view"/>
            </RelativeLayout>

        </android.support.v7.widget.CardView>
        <LinearLayout
            android:id="@+id/step_linearlayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ingredient_linearlayout">
            <RelativeLayout
                android:layout_width="match_parent"
...
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/colorAccent"
                    android:layout_alignBottom="@id/txt_steps_title"/>
            </RelativeLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recipestep_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:layoutManager="LinearLayoutManager"
                tools:context="com.adeoluwa.android.bakingapp.RecipeStepListActivity"
...
